--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -33,9 +33,31 @@
   width: 260px;
   background-color: $color-default-white;
   border: 1px solid rgba(16, 38, 84, 0.2);
+
+  @include hover-focus {
+    border: 1px solid #102654;
+  }
+  @include active {
+    color: $color-default-white;
+    background: linear-gradient(97deg, #ed0233 17.6%, #003eb7 95.31%);
+  }
+
+  @include disabled {
+    color: #10265433;
+    border: 1px solid rgba(16, 38, 84, 0.2);
+    cursor: not-allowed;
+    pointer-events: none;
+    outline: none;
+  }
+
+  &--is-selected {
+    color: $color-default-white;
+    background: linear-gradient(97deg, #ed0233 17.6%, #003eb7 95.31%);
+  }
 }
 
 .faq__accordion-wrapper {
+  width: 860px;
   ul {
     list-style-type: none;
     padding: 25px 0;
@@ -91,6 +113,10 @@
     line-height: 24px;
     width: 660px;
   }
+
+  p[data-target="is-opened"] {
+    display: block;
+  }
 }
 
 .faq__button {
@@ -105,6 +131,15 @@
   cursor: pointer;
   font-size: 0;
   position: relative;
+
+  @include hover-focus {
+    background-color: #1c3374;
+  }
+
+  @include disabled {
+    border: 1px solid #1c3374;
+    opacity: 0.3;
+  }
 }
 
 .faq__button::before {
@@ -127,6 +162,25 @@
   height: 20px;
   background-color: #1c3374;
   transform: translate(-50%, -50%);
+}
+
+.faq__button:hover::before,
+.faq__button:hover::after {
+  background-color: $color-default-white;
+}
+
+.faq__button:focus::before,
+.faq__button:focus::after {
+  background-color: $color-default-white;
+}
+
+.faq__button:disabled::before,
+.faq__button:disabled::after {
+  background-color: #1c3374;
+  opacity: 0.3;
+  cursor: not-allowed;
+  pointer-events: none;
+  outline: none;
 }
 
 .faq__button.is-opened::before {
