--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,9 +17,6 @@
 // ---------------------------------
 
 @import "blocks/button";
-@import "blocks/custom-input";
-@import "blocks/custom-toggle";
-@import "blocks/custom-select";
 @import "blocks/header";
 @import "blocks/intro";
 @import "blocks/about";
@@ -34,6 +31,7 @@
 @import "blocks/contacts";
 @import "blocks/nav";
 @import "blocks/socials";
+@import "blocks/form-container";
 
 
 // ---------------------------------
