--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,4 +1,5 @@
 .contacts__header {
+  color: #102654;
   margin: 0 0 40px 0;
   font-family: $ff-alumni;
   font-size: 54px;
@@ -7,8 +8,7 @@
   line-height: 54px;
   letter-spacing: 1.62px;
 }
-.contacts__text-wrapper {
-}
+
 .contacts__list {
   list-style-type: none;
   display: flex;
