--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,17 +2,17 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
 
-  h3 {
-    color: $color-default-white;
-    font-family: $ff-alumni;
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 54px;
-    letter-spacing: 1.62px;
-    margin: 0 0 33px 0;
-  }
+.footer__header {
+  color: $color-default-white;
+  font-family: $ff-alumni;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 54px;
+  letter-spacing: 1.62px;
+  margin: 0 0 33px 0;
 }
 
 .footer__contacts {
