--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -32,7 +32,7 @@
     font-style: normal;
     font-weight: 300;
     line-height: 24px; /* 150% */
-    margin: 0;
+    margin: 0 0 5px 0;
   }
 }
 
@@ -47,7 +47,7 @@
 
 .about__iframe-wrapper {
   position: absolute;
-  top: 70%;
+  top: 72%;
   right: 54%;
   width: 364px;
   height: 228px;
