--- a/source/sass/blocks/jury-swiper.scss
+++ b/source/sass/blocks/jury-swiper.scss
@@ -16,19 +16,21 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  margin: 0 0 46px 0;
-  padding: 0 0 0 103px;
+  margin: 0 0 49px 0;
 }
 
 .jury-swiper-name {
   position: absolute;
   color: #fff;
+  width: 177px;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
   line-height: 22px;
   bottom: 26px;
-  left: 55px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
 }
 
 .jury-image-wrapper {
