--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -13,12 +13,23 @@
   gap: 40px;
 }
 
+
 .nav__user-link {
   color: $color-default-white;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 22px;
+  padding: 5px 10px;
+
+  @include hover {
+    border-bottom: 1px solid $color-default-white;
+  }
+
+  @include focus {
+    border: none;
+    outline: 1px solid $color-default-white;
+  }
 }
 
 .nav__social-list {
