--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -25,16 +25,17 @@
     line-height: 54px;
     letter-spacing: 1.62px;
     text-align: center;
-    margin: 0 0 38px 0;
+    margin: 0 0 32px 0;
   }
 }
 
 .subscription__tabs-controls {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 50px;
   margin: 0 auto 51px auto;
-  width: 390px;
+  width: 348px;
   height: 34px;
   flex-shrink: 0;
   position: relative;
@@ -45,7 +46,7 @@
     width: 100%;
     height: 2px;
     background-color: rgba(120, 120, 120, 0.2);
-    bottom: -14px;
+    bottom: -7px;
     left: 0;
   }
 }
@@ -55,6 +56,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  padding: 0;
   border: none;
   background-color: transparent;
   color: rgba(16, 38, 84, 0.5);
@@ -109,6 +111,7 @@
     height: 448px;
     flex-shrink: 0;
     background: $color-default-white;
+    padding: 48px 77px 65px 78px;
 
     @include hover-focus {
       border: 7px solid;
@@ -153,22 +156,22 @@
     display: flex;
     gap: 14px;
     align-items: center;
-  }
 
-  &::before {
-    position: absolute;
-    content: attr(data-content);
-    top: 30px;
-    left: -19px;
-    color: #e8e8e8;
-    z-index: -1;
-    transform: translateY(-50%);
-    color: #e8e8e8;
-    font-size: 100px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 150%;
-    opacity: 0.48;
+    &::before {
+      position: absolute;
+      content: attr(data-content);
+      top: 20px;
+      left: -19px;
+      color: #e8e8e8;
+      z-index: -1;
+      transform: translateY(-50%);
+      color: #e8e8e8;
+      font-size: 100px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%;
+      opacity: 0.48;
+    }
   }
 }
 
