решена проблема со свайпером
решена проблема с отсутствием loop:true на слайде с жюри.

Аккордеон теперь корректно закрывает и открывает текст

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,7 +12,8 @@
   }
 }
 .advantages__container {
-  padding: 0px 103px 120px 103px;
+  padding: 118px 120px 103px 120px;
+  background: #F8F9FC;
 
   ul {
     margin: 0;
