--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,7 +12,7 @@
   }
 }
 .advantages__container {
-  padding: 118px 120px 103px 120px;
+  padding: 118px 160px 125px 160px;
   background: #F8F9FC;
 
   ul {
@@ -27,7 +27,7 @@
 
   li  {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
   }
 
   li[data-element="center"] {
@@ -83,7 +83,7 @@
   background-color: #1c3374;
   display: flex;
   flex-direction: column;
-  padding: 70px 34px 86px 34px;
+  padding: 73px 34px 76px 34px;
   width: 240px;
   height: 340px;
   grid-column: 2/3;
@@ -112,7 +112,7 @@
     font-weight: 700;
     line-height: 26px;
     text-align: center;
-    margin: 0 0 42px 0;
+    margin: 0 0 37px 0;
   }
 
   p {
