--- a/source/sass/blocks/reviews-swiper.scss
+++ b/source/sass/blocks/reviews-swiper.scss
@@ -1,5 +1,5 @@
 .reviews-swiper {
-  padding: 120px 103px 121px 103px;
+  padding: 120px 103px;
   h2 {
     font-family: $ff-alumni;
     font-size: 54px;
@@ -21,7 +21,7 @@
 .reviews-slide {
   display: flex;
   max-width: 560px;
-  height: 279px;
+  height: 259px;
   padding: 60px;
   color: $color-default-white;
   background: #1c3374;
