--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -12,12 +12,13 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  margin: 0 0 33px 0;
+  margin: 0 0 36px 0;
 }
 
 .footer__contacts {
   padding: 60px 163px 60px 120px;
   width: 50%;
+  height: 337px;
 }
 
 .footer__nav {
