--- a/source/sass/blocks/form-container.scss
+++ b/source/sass/blocks/form-container.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  height: 337px;
 }
 
 .form-container__input {
@@ -20,8 +21,8 @@ input {
   color: $color-default-white;
   border: none;
   border-bottom: 1px solid rgba(225, 225, 225, 0.8);
-  padding: 10px 10px 10px 4px;
   position: relative;
+  padding: 0;
 
   @include hover {
     border-bottom: 1px solid $color-default-white;
