--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -4,13 +4,16 @@
   font-weight: 400;
   line-height: 24px;
   text-transform: uppercase;
+  margin: 0 22px 0 0;
 }
 
 .nav__user-list {
   display: flex;
   list-style-type: none;
   text-decoration: none;
-  gap: 40px;
+  gap: 21px;
+  padding: 0;
+  margin: 0;
 }
 
 
