--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -11,9 +11,28 @@
     #73184b 75.5%,
     #b4022a 100%
   );
+
+  @include vp-1366 {
+    padding: 30px 45px;
+  }
+
+  @include vp-768 {
+    padding: 16px 15px;
+  }
 }
+
 .header__image {
   display: block;
+
+  @include vp-1366 {
+    width: 111px;
+    height: 24px;
+  }
+
+  @include vp-768 {
+    width: 102px;
+    height: 22px;
+  }
 }
 
 .header__telephone {
@@ -25,6 +44,15 @@
   line-height: 26px;
   text-decoration: none;
 
+  @include vp-1366 {
+    font-size: 24px;
+    line-height: 24px;
+  }
+
+  @include vp-768 {
+    font-size: 22px;
+    line-height: 22px;
+  }
   @include hover-focus {
     color: #1c3374;
   }
