--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,5 +1,9 @@
 .advantages {
   padding: 120px 0 0 0;
+
+  @include vp-1366 {
+    padding: 0;
+  }
   h2 {
     font-family: $ff-alumni;
     font-size: 54px;
@@ -9,11 +13,21 @@
     letter-spacing: 1.62px;
     text-align: center;
     margin: 0 0 50px 0;
+
+    @include vp-1366 {
+      font-size: 42px;
+      line-height: 42px;
+      letter-spacing: 1.26px;
+    }
   }
 }
 .advantages__container {
   padding: 118px 160px 125px 160px;
-  background: #F8F9FC;
+  background: #f8f9fc;
+
+  @include vp-1366 {
+    padding: 100px 45px;
+  }
 
   ul {
     margin: 0;
@@ -22,10 +36,15 @@
     display: grid;
     gap: 116px 60px;
     grid-template-columns: 32.7% 23.1% 32.7%;
-    
+
+    @include vp-1366 {
+      grid-template-columns: 1fr 1fr;
+      gap: 14px 49px;
+      justify-self: center;
+    }
   }
 
-  li  {
+  li {
     display: flex;
     align-items: flex-start;
   }
@@ -33,6 +52,13 @@
   li[data-element="center"] {
     grid-column: 2/3;
     grid-row: 1/3;
+
+    @include vp-1366 {
+      grid-column: 1/3;
+      grid-row: 2/3;
+      margin-bottom: 26px;
+      padding: 26px 139px 0 139px;
+    }
   }
 }
 
@@ -50,6 +76,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin: 0 30px 0 0;
+
+    @include vp-1366 {
+      margin: 0 14px 0 0;
+    }
   }
 
   span + span {
@@ -68,6 +98,12 @@
     font-weight: 400;
     line-height: 22px;
     margin: 0 0 8px 0;
+
+    @include vp-1366 {
+      font-size: 20px;
+      line-height: 20px;
+      margin: 0 0 12px 0;
+    }
   }
 
   p {
@@ -88,12 +124,13 @@
   height: 340px;
   grid-column: 2/3;
   height: 100%;
+  justify-content: center;
 
-  ul {
-    display: flex;
-    flex-direction: column;
-    gap: 0;
+  @include vp-1366 {
+    width: 100%;
+    padding: 35px 0;
   }
+
 
   span {
     color: $color-default-white;
@@ -103,6 +140,10 @@
     font-weight: 700;
     line-height: 70px;
     margin: 0 0 12px 0;
+
+    @include vp-1366 {
+      margin: 0 0 25px 0;
+    }
   }
 
   span + span {
@@ -113,6 +154,12 @@
     line-height: 26px;
     text-align: center;
     margin: 0 0 37px 0;
+
+    @include vp-1366 {
+      font-size: 24px;
+      line-height: 24px;
+      margin: 0 0 25px 0;
+    }
   }
 
   p {
@@ -124,5 +171,10 @@
     line-height: 150%;
     margin: 0;
     text-align: center;
+
+    @include vp-1366 {
+      width: 210px;
+      margin: 0 auto;
+    }
   }
 }
