--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,6 +1,13 @@
 .intro {
   color: $color-default-white;
-  background: linear-gradient(90deg, #1C3477 0%, #1C3477 0.01%, #1A3578 39.11%, #73184B 75.5%, #B4022A 100%);
+  background: linear-gradient(
+    90deg,
+    #1c3477 0%,
+    #1c3477 0.01%,
+    #1a3578 39.11%,
+    #73184b 75.5%,
+    #b4022a 100%
+  );
 }
 
 .intro__container {
@@ -11,8 +18,26 @@
   margin: 0;
   width: 100%;
 
+  @include vp-1366 {
+    padding: 0 45px 100px 45px;
+    gap: 30px;
+  }
+
+  @include vp-768 {
+    padding: 0 15px 70px 15px;
+  }
+
   img {
     background: rgba(20, 54, 122, 0.5);
+
+    @include vp-1366 {
+      width: 324px;
+      height: 390px;
+    }
+
+    @include vp-768 {
+      display: none;
+    }
   }
 }
 
@@ -22,6 +47,18 @@
   width: 385px;
   height: 400px;
   padding: 62px 0 0 0;
+
+  @include vp-1366 {
+    padding: 31px 0 0 0;
+    width: 324px;
+    height: 328px;
+    grid-template-columns: 113px 185px;
+    grid-column-gap: 27px;
+  }
+
+  @include vp-768 {
+    width: 290px;
+  }
 
   ul {
     margin: 0;
@@ -40,6 +77,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
+
+    @include vp-768 {
+      line-height: 20px;
+    }
   }
 
   p {
@@ -55,6 +96,19 @@
     padding: 0;
     grid-column: span 2;
     margin: 0 0 10px 0;
+
+    @include vp-1366 {
+      font-size: 42px;
+      font-style: normal;
+      line-height: 42px;
+      letter-spacing: 1.26px;
+    }
+
+    @include vp-768 {
+      font-size: 32px;
+      line-height: 32px;
+      letter-spacing: 0.96px;
+    }
   }
 
   h2 {
@@ -68,6 +122,18 @@
     text-transform: uppercase;
     margin: 0 0 50px 0;
     padding: 0;
+
+    @include vp-1366 {
+      font-size: 72px;
+      line-height: 85px;
+      letter-spacing: 0.6px;
+    }
+
+    @include vp-768 {
+      font-size: 62px;
+      line-height: 70px;
+      letter-spacing: 1.86px;
+    }
   }
 }
 
@@ -75,7 +141,11 @@
   width: 230px;
   margin: 0;
   grid-column: 2 / 3;
- margin: 0 0 0 41px;
+  margin: 0 0 0 41px;
+
+  @include vp-1366 {
+    margin: 0;
+  }
 }
 
 .intro__button {
@@ -100,6 +170,12 @@
   color: $color-default-white;
   cursor: pointer;
   z-index: 1;
+
+  @include vp-1366 {
+    width: 185px;
+    height: 56px;
+    padding: 22px 30px;
+  }
 
   @include hover-focus {
     background-color: $color-default-white;
