--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -9,12 +9,26 @@
     text-align: center;
     margin: 0 0 70px 0;
     padding: 120px 0 0 0;
+
+    @include vp-1366 {
+      font-size: 42px;
+      font-weight: 600;
+      line-height: 42px;
+      padding: 100px 0 0 0;
+      margin: 0 0 40px 0;
+    }
   }
 }
 .promo__container {
   display: flex;
   gap: 40px;
   padding: 0px 103px 120px 103px;
+
+  @include vp-1366 {
+    padding: 0px 45px 100px 45px;
+    flex-direction: column;
+    gap: 31px;
+  }
 }
 
 .promo__wrapper {
@@ -28,7 +42,6 @@
   padding: 40px 45px 45px 45px;
   display: flex;
   flex-direction: column;
-  width: 50%;
   height: 462px;
 
   h4 {
@@ -37,6 +50,10 @@
     font-weight: 700;
     line-height: 26px;
     margin: 0 0 15px 0;
+
+    @include vp-1366 {
+      margin: 0 0 10px 0;
+    }
   }
 
   span {
@@ -45,6 +62,10 @@
     font-weight: 700;
     line-height: 70px;
     margin: 0 0 25px 0;
+
+    @include vp-1366 {
+      margin: 0 0 19px 0;
+    }
   }
 
   p {
@@ -54,11 +75,18 @@
     line-height: 24px;
     width: 190px;
     margin: 0 0 176px 0;
+
+    @include vp-1366 {
+      margin: 0 0 186px 0;
+    }
   }
 }
 
 .promo__image-wrapper {
-  width: 50%;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .promo__button {
@@ -91,7 +119,7 @@
   }
 
   @include focus {
-   outline: 1px solid $color-default-white;
+    outline: 1px solid $color-default-white;
   }
 
   @include disabled {
@@ -101,7 +129,6 @@
     pointer-events: none;
     outline: none;
   }
- 
 }
 
 .promo__button:focus::after {
@@ -127,9 +154,8 @@
 
   @include focus {
     outline: 1px solid #1c3374;
-   }
+  }
 }
-
 
 .promo__offer-wrapper {
   display: flex;
@@ -138,6 +164,11 @@
   width: 100%;
   justify-content: space-between;
   height: 462px;
+
+  @include vp-1366 {
+    flex-direction: row;
+    gap: 31px;
+  }
 }
 
 .promo__offer {
@@ -152,6 +183,12 @@
       rgba(0, 53, 159, 1)
     )
     1;
+  width: 560px;
+
+  @include vp-1366 {
+    width: 324px;
+    padding: 23px 38px 28px 28px;
+  }
 
   h4 {
     font-size: 26px;
@@ -159,6 +196,11 @@
     font-weight: 700;
     line-height: 26px;
     margin: 0 0 10px 0;
+
+    @include vp-1366 {
+      font-size: 24px;
+      line-height: 24px;
+    }
   }
 
   p {
@@ -167,5 +209,11 @@
     font-weight: 300;
     line-height: 24px;
     margin: 0 0 67px 0;
+
+    @include vp-1366 {
+      width: 234px;
+      height: 48px;
+      margin: 0 0 45px 0;
+    }
   }
 }
