--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,14 +1,13 @@
-.nav__title {
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  text-transform: uppercase;
+.nav__image {
   margin: 0 22px 0 0;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
 
   @include vp-1366 {
     width: 100px;
     height: 22px;
+    margin: 0 33px 0 0;
   }
 }
 
@@ -19,6 +18,10 @@
   gap: 21px;
   padding: 0;
   margin: 0;
+
+  @include vp-1366 {
+    gap: 11px;
+  }
 }
 
 
