--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -84,8 +84,11 @@
 
 .promo__image-wrapper {
   img {
-    width: 100%;
-    height: 100%;
+
+    @include vp-1366 {
+      width: 100%;
+    }
+   
   }
 }
 
@@ -168,6 +171,7 @@
   @include vp-1366 {
     flex-direction: row;
     gap: 31px;
+    height: 211px;
   }
 }
 
