--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -58,6 +58,8 @@
 
   @include vp-768 {
     width: 290px;
+    grid-template-columns: 113px 162px;
+    grid-column-gap: 13px;
   }
 
   ul {
@@ -137,17 +139,6 @@
   }
 }
 
-.intro__button-link {
-  width: 230px;
-  margin: 0;
-  grid-column: 2 / 3;
-  margin: 0 0 0 41px;
-
-  @include vp-1366 {
-    margin: 0;
-  }
-}
-
 .intro__button {
   text-align: center;
   font-family: $ff-placeholder;
@@ -163,7 +154,7 @@
   padding: 27px 56px;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  margin: 0 0 0 41px;
   grid-column: 2 / 3;
   background-color: transparent;
   outline: 2px solid $color-default-white;
@@ -175,6 +166,13 @@
     width: 185px;
     height: 56px;
     padding: 22px 30px;
+    margin: 0;
+  }
+
+  @include vp-768 {
+    width: 290px;
+    padding: 22px 0px;
+    grid-column: 1 / 3;
   }
 
   @include hover-focus {
