--- a/source/sass/blocks/subscription.scss
+++ b/source/sass/blocks/subscription.scss
@@ -26,6 +26,10 @@
     padding: 100px 164px;
   }
 
+  @include vp-768 {
+    padding: 70px 15px;
+  }
+
   h2 {
     font-family: $ff-alumni;
     font-size: 54px;
@@ -60,6 +64,10 @@
     width: 334px;
   }
 
+  @include vp-768 {
+    width: 290px;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -87,6 +95,11 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 18px;
+  }
+
+  @include vp-768 {
+    font-size: 16px;
+    line-height: 16px;
   }
 
   @include hover-focus {
