--- a/source/sass/blocks/jury-swiper.scss
+++ b/source/sass/blocks/jury-swiper.scss
@@ -4,6 +4,10 @@
   @include vp-1366 {
     padding: 0 100px;
   }
+
+  @include vp-768 {
+    padding: 0 47px;
+  }
 }
 
 .jury-container {
@@ -32,6 +36,12 @@
     line-height: 42px;
     letter-spacing: 1.26px;
     margin: 0 0 38px 0;
+  }
+
+  @include vp-768 {
+    font-size: 32px;
+    line-height: 32px;
+    letter-spacing: 0.96px;
   }
 }
 
