--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,6 +1,6 @@
 .advantages {
   padding: 0;
-  
+
   h2 {
     font-family: $ff-alumni;
     font-size: 54px;
@@ -26,6 +26,10 @@
     padding: 100px 45px;
   }
 
+  @include vp-768 {
+    padding: 70px 0 50px 0;
+  }
+
   ul {
     margin: 0;
     padding: 0;
@@ -39,11 +43,22 @@
       gap: 14px 49px;
       justify-self: center;
     }
+
+    @include vp-768 {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   li {
     display: flex;
     align-items: flex-start;
+
+    @include vp-768 {
+      flex-direction: column;
+      align-items: center;
+      padding: 0 47px;
+    }
   }
 
   li[data-element="center"] {
@@ -56,12 +71,21 @@
       margin-bottom: 26px;
       padding: 26px 139px 0 139px;
     }
+
+    @include vp-768 {
+      padding: 0;
+      width: 100%;
+    }
   }
 }
 
 .advantages__count-wrapper {
   display: flex;
   flex-direction: column;
+
+  @include vp-768 {
+    text-align: center;
+  }
 
   span {
     font-size: 70px;
@@ -77,6 +101,11 @@
     @include vp-1366 {
       margin: 0 14px 0 0;
     }
+
+    @include vp-768 {
+      font-size: 64px;
+      line-height: 64px;
+    }
   }
 
   span + span {
@@ -89,6 +118,9 @@
 }
 
 .advantages__text-wrapper {
+  @include vp-768 {
+    text-align: center;
+  }
   h4 {
     font-size: 22px;
     font-style: normal;
@@ -101,6 +133,11 @@
       line-height: 20px;
       margin: 0 0 12px 0;
     }
+
+    @include vp-768 {
+      font-size: 18px;
+      line-height: 20px;
+    }
   }
 
   p {
@@ -109,6 +146,11 @@
     font-weight: 300;
     line-height: 24px;
     margin: 0;
+
+    @include vp-768 {
+      font-size: 14px;
+      line-height: 22px;
+    }
   }
 }
 
@@ -128,7 +170,6 @@
     padding: 35px 0;
   }
 
-
   span {
     color: $color-default-white;
     text-align: center;
@@ -140,6 +181,11 @@
 
     @include vp-1366 {
       margin: 0 0 25px 0;
+    }
+
+    @include vp-768 {
+      font-size: 64px;
+      line-height: 64px;
     }
   }
 
@@ -157,6 +203,12 @@
       line-height: 24px;
       margin: 0 0 25px 0;
     }
+
+    @include vp-768 {
+      font-size: 22px;
+      font-weight: 700;
+      line-height: 22px;
+    }
   }
 
   p {
@@ -172,6 +224,12 @@
     @include vp-1366 {
       width: 210px;
       margin: 0 auto;
+    }
+
+    @include vp-768 {
+      font-size: 14px;
+      line-height: 22px;
+      width: 186px;
     }
   }
 }
