--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -16,7 +16,7 @@
   font-weight: 600;
   line-height: 54px;
   letter-spacing: 1.62px;
-  margin: 0 0 36px 0;
+  margin: 0 0 33px 0;
 
   @include vp-1366 {
     font-size: 42px;
@@ -24,17 +24,24 @@
     letter-spacing: 1.26px;
     margin: 0 0 28px 0;
   }
+
+  @include vp-768 {
+    font-size: 32px;
+    line-height: 32px;
+    letter-spacing: 0.96px;
+  }
 }
 
 .footer__contacts {
-  padding: 60px 163px 60px 120px;
-  width: 50%;
-  height: 337px;
+  padding: 60px 163px 64px 120px;
 
   @include vp-1366 {
     width: 100%;
     padding: 100px 214px 100px 133px;
-    height: 424px;
+  }
+
+  @include vp-768 {
+    padding: 70px 135px 70px 15px;
   }
 }
 
@@ -52,5 +59,11 @@
     padding: 0 45px;
     min-height: 115px;
     justify-content: flex-start;
+  }
+
+  @include vp-768 {
+    flex-direction: column;
+    min-height: 260px;
+    padding: 30px 15px 40px 15px;
   }
 }
