--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -9,19 +9,30 @@
     height: 22px;
     margin: 0 33px 0 0;
   }
+
+  @include vp-768 {
+    margin: 0 0 30px 0;
+  }
 }
 
 .nav__user-list {
   display: flex;
   list-style-type: none;
   text-decoration: none;
-  gap: 21px;
+  flex-wrap: wrap;
+  gap: 40px;
   padding: 0;
   margin: 0;
 
   @include vp-1366 {
-    gap: 11px;
+    gap: 30px;
   }
+
+  @include vp-768 {
+    gap: 20px 35px;
+    margin: 0 0 55px 0;
+  }
+  
 }
 
 
@@ -31,7 +42,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: 22px;
-  padding: 5px 10px;
 
   @include hover {
     border-bottom: 1px solid $color-default-white;
@@ -48,4 +58,9 @@
   list-style-type: none;
   text-decoration: none;
   gap: 10px;
+
+  @include vp-768 {
+    padding: 0;
+    margin: 0;
+  }
 }
