--- a/source/sass/blocks/reviews-swiper.scss
+++ b/source/sass/blocks/reviews-swiper.scss
@@ -34,6 +34,10 @@
     max-width: 580px;
     height: 249px;
   }
+
+  @include vp-768 {
+    max-width: 226px;
+  }
 }
 
 .reviews-slide {
@@ -53,10 +57,22 @@
     max-width: 580px;
     height: 249px;
   }
+
+  @include vp-768 {
+    padding: 30px 25px;
+    flex-direction: column;
+    align-items: center;
+    width: 226px;
+    min-height: 328px;
+  }
 }
 
 .reviews-text-wrapper {
   width: 330px;
+
+  @include vp-768 {
+    width: 176px;
+  }
   h6 {
     font-size: 22px;
     font-style: normal;
@@ -69,6 +85,11 @@
       line-height: 20px;
       margin: 0 0 13px 0;
     }
+
+    @include vp-768 {
+      font-size: 18px;
+      line-height: 20px;
+    }
   }
   p {
     font-size: 16px;
@@ -80,21 +101,39 @@
     @include vp-1366 {
       width: 339px;
     }
+
+    @include vp-768 {
+      font-size: 14px;
+      line-height: 22px;
+      width: 176px;
+    }
   }
 }
 
 .reviews-button-next {
   top: 26%;
+  
+
   @include vp-1366 {
     top: 37%;
     right: -70px;
+  }
+
+  @include vp-768 {
+    right: -55px;
   }
 }
 
 .reviews-button-prev {
   top: 27%;
+  left: -77px;
+  
   @include vp-1366 {
     top: 39%;
     left: -70px;
+  }
+
+  @include vp-768 {
+    left: -55px;
   }
 }
