--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,4 +1,14 @@
 .container {
   width: 100%;
+  max-width: 1920px;
   margin: 0 auto;
+  padding: 0 103px;
+
+  @include vp-1365 {
+    padding: 0 45px;
+  }
+
+  @include vp-767 {
+    padding: 0 15px;
+  }
 }
